fix layout bug

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -2644,8 +2644,8 @@ body {
     }
   }
   .img-small {
-    height: 132px;
-    width: 132px;
+    height: 176px;
+    width: 176px;
   }
   .btn-primary {
     font-weight: 600;
